[package]
name = "json2docx"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
docx-rs = { git = "https://github.com/a-shpak/docx-rs.git", branch = "main" }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
base64 = "0.21.2"
gloo-utils = { version = "0.2.0", features = ["serde"] }
regex = "1.5"
reqwest = { version = "0.11", features = ["blocking"] }
tempfile = "3.7"