[package]
name = "json2docx"
version = "0.1.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
docx-rs = { git = "https://github.com/a-shpak/docx-rs.git", branch = "docx2json" }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
base64 = "0.21.2"
gloo-utils = { version = "0.2.0", features = ["serde"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
