[package]
name = "json2docx"
version = "0.1.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
docx-rs = { git = "https://github.com/a-shpak/docx-rs.git", branch = "defer-image" }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
base64 = "0.21.2"
gloo-utils = { version = "0.2.0", features = ["serde"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
wasm-bindgen-test = "0.3.0"
futures = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
